Fix main menu logo hash

--- a/textures.ini
+++ b/textures.ini
@@ -3,7 +3,7 @@
 # https://github.com/hrydgard/ppsspp/wiki/Texture-replacement-ini-syntax 
 [options]
 version = 1
-hash = quick
+hash = xxh32
 ignoreMipmap = false
 
 [games]
@@ -14,10 +14,12 @@ ignoreMipmap = false
 # Use / for folders not \, avoid special characters, and stick to lowercase.
 # See wiki for more info.
 
-#097167509fc254f800000006 = gui/mainmenu/logo.png
-pp097000509fc254f800000000 = gui/mainmenu/logo.png
-#097000509fc254f837b71d26
-#097000509fc254f804eafaa6
+# Holy shit this game is a PITA to replace textures. Some parts of them textures keeps getting
+# filled up with garbage that change everytime you go to a race and it complicates the hashes.
+# This took me too long to figure out. Fuck.
+
+# Main menu stuff
+000000009fc254f800000000 = gui/mainmenu/logo.png
 
 [hashranges]
 
