rename gui directory

--- a/textures.ini
+++ b/textures.ini
@@ -19,7 +19,7 @@ ignoreMipmap = false
 # This took me too long to figure out. Fuck.
 
 # Main menu stuff
-000000009fc254f800000000 = gui/mainmenu/logo.png
+000000009fc254f800000000 = ui/mainmenu/logo.png
 
 [hashranges]
 
