Slightly updated main menu logo and added save button texture

--- a/textures.ini
+++ b/textures.ini
@@ -20,6 +20,7 @@ ignoreMipmap = false
 
 # Main menu stuff
 000000009fc254f800000000 = ui/mainmenu/logo.png
+09712350d2a4f9785b079e80 = ui/mainmenu/savebutton.png
 
 [hashranges]
 
