--- a/textures.ini
+++ b/textures.ini
@@ -14,15 +14,22 @@ ignoreMipmap = false
 # Use / for folders not \, avoid special characters, and stick to lowercase.
 # See wiki for more info.
 
-# Holy shit this game is a PITA to replace textures. Some parts of them textures keeps getting
-# filled up with garbage that change everytime you go to a race and it complicates the hashes.
-# This took me too long to figure out. Fuck.
+# NOTE: Hashes are formed like this(A = Address, C = Color Lookup Table, D = Data)
+# AAAAAAAACCCCCCCCDDDDDDDD
 
 # Main menu stuff
-000000009fc254f800000000 = ui/mainmenu/logo.png
-00000000d2a4f97800000000 = ui/mainmenu/savebutton.png
+000000009fc254f82e7d99f9 = ui/mainmenu/logo.png
+00000000d2a4f9788a8e9d46 = ui/mainmenu/savebutton.png
 
 [hashranges]
+
+# Main menu logo
+0x09700650,128,64 = 128,40
+0x09717850,128,64 = 128,40
+
+# Save button
+0x09712350,64,32 = 38,20
+0x09719250,64,32 = 38,20
 
 [filtering]
 
